--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ h2 {
 
 .line {
     height: 6px;
-    background-color: black;
+    background-color: pink;
     width: 70px;
     margin: 8px auto;
 
