--- a/style.css
+++ b/style.css
@@ -40,3 +40,42 @@ h2 {
     font-size: 18;
     text-align: center;
 }
+.menu{
+   position: absolute;
+   list-style: none;
+    font-family: Noto Sans KR;
+    top: 10px;
+    right: 30px;
+    z-index: 10;
+    cursor: pointer;}
+
+
+.links{
+    
+    float: left;
+    color: white;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 9px;
+    padding-right: 9px;
+    font-family: fantasy;
+    font-size: 20px;
+}
+
+#Welcome {
+    position: absolute;
+    overflow: hidden;
+    height: 800px;
+    color: #FFFFFF;
+    bottom: 0;
+    top: 0;
+    right: 0;
+    left: 0;
+    opacity: 0.83;
+    background: linear-gradient(#60ebeb 0%, #27ae60 100%);
+    display: table;
+    width: 100%;
+    height: 100%;
+    z-index: 9;
+    
+    
