--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     text-align: center;
-    background: linear-gradient(#E1BEE7 0%, #90CAF9 100%);
-    background-repeat: no-repeat
+    background: linear-gradient(#00ffff 0%,#008080 100% );
+    padding-top: 800px;
 }
 
 img {
@@ -16,7 +16,7 @@ h1 {
 p {
     font-size: 25px;
     color: purple;
-    fot-weight: bold;
+    font-weight: bold;
 
 
 }
@@ -77,5 +77,43 @@ h2 {
     width: 100%;
     height: 100%;
     z-index: 9;
+}
+
+.menu{
+   position: absolute;
+   list-style: none;
+    font-family: Noto Sans KR;
+    top: 10px;
+    right: 30px;
+    z-index: 10;
+    cursor: pointer;}
     
+.links{
+    
+    float: left;
+    color: white;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 9px;
+    padding-right: 9px;
+    font-family: fantasy;
+    font-size: 20px;
+}
+
+.links:hover{
+    
+    background-color: dodgerblue;
+}
+
+img { transition: 
+    
+    
+}    
+
+#inspo img{
+     
+    width: 400px;
+    height: 400px;
+    
+}
     
